compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__constant_constructor_gets_pure_annotation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 44
expression: "\npub type X {\n  X(Int, List(String))\n}\n\npub const x = X(1, [\"1\"])\npub const y = X(1, [])\n        "
snapshot_kind: text
---
----- SOURCE CODE

pub type X {
  X(Int, List(String))
}

pub const x = X(1, ["1"])
pub const y = X(1, [])
        

----- COMPILED JAVASCRIPT
import { toList, CustomType as $CustomType } from "../gleam.mjs";

export class X extends $CustomType {
  constructor($0, $1) {
    super();
    this[0] = $0;
    this[1] = $1;
  }
}
export const X$X = ($0, $1) => new X($0, $1);
export const X$isX = (value) => value instanceof X;
export const X$X$0 = (value) => value[0];
export const X$X$1 = (value) => value[1];

export const x = /* @__PURE__ */ new X(1, /* @__PURE__ */ toList(["1"]));

export const y = /* @__PURE__ */ new X(1, /* @__PURE__ */ toList([]));
