compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__constants_get_their_own_jsdoc_comment.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 132
expression: "\n/// 11 is clearly the best number!\npub const jaks_favourite_number = 11\n"
snapshot_kind: text
---
----- SOURCE CODE

/// 11 is clearly the best number!
pub const jaks_favourite_number = 11


----- COMPILED JAVASCRIPT
/**
 * 11 is clearly the best number!
 */
export const jaks_favourite_number = 11;
