compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__constructor_function_in_constant.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 127
expression: pub const a = Ok
snapshot_kind: text
---
----- SOURCE CODE
pub const a = Ok

----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export const a = (var0) => { return new Ok(var0); };
