compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__custom_type_constructor_imported_and_aliased.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 5
expression: "import other_module.{A as B}\n\npub const local = B\n"
snapshot_kind: text
---
----- SOURCE CODE
import other_module.{A as B}

pub const local = B


----- COMPILED JAVASCRIPT
import * as $other_module from "../../package/other_module.mjs";
import { A as B } from "../../package/other_module.mjs";

export const local = /* @__PURE__ */ new B();
