compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__literal_bool_does_not_get_constant_annotation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 101
expression: "\n        pub const a = True\n        pub const b = False\n    "
snapshot_kind: text
---
----- SOURCE CODE

        pub const a = True
        pub const b = False
    

----- COMPILED JAVASCRIPT
export const a = true;

export const b = false;
