compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__literal_int_does_not_get_constant_annotation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 86
expression: pub const a = 1
snapshot_kind: text
---
----- SOURCE CODE
pub const a = 1

----- COMPILED JAVASCRIPT
export const a = 1;
