compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__literal_list_does_not_get_constant_annotation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 111
expression: "pub const a = [1, 2, 3]"
snapshot_kind: text
---
----- SOURCE CODE
pub const a = [1, 2, 3]

----- COMPILED JAVASCRIPT
import { toList } from "../gleam.mjs";

export const a = /* @__PURE__ */ toList([1, 2, 3]);
